# ankiServer

./: pyproject.toml  startAnki.bat
